# granite-speech-studio

./: .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml  streamlit_app.py
.claude/: settings.json
.claude/hooks/: block-lockfile-edit.sh  check-on-stop.sh  ruff-on-edit.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/plans/: 2026-03-08-guardian-hap-design.md  2026-03-08-guardian-hap.md  2026-03-08-pipeline-ui-design.md  2026-03-08-pipeline-ui-implementation.md  2026-03-16-punctuation-capitalization.md
docs/specs/: 2026-03-16-punctuation-capitalization-design.md
docs/superpowers/plans/: 2026-03-18-vad-segmentation.md  2026-03-19-max-tokens-and-english-translation.md
docs/superpowers/specs/: 2026-03-17-vad-segmentation-design.md  2026-03-19-max-tokens-and-english-translation-design.md
tests/: test_app_ui.py  test_streamlit_app.py
