[project]
name = "granite-speech-pipeline"
version = "0.8.0"
description = "Transcribe and translate audio and video files using the IBM Granite 4.0 1B Speech model on Apple Silicon with MLX."
requires-python = ">=3.12"
dependencies = [
    "mlx-audio",
    "silero-vad",
    "streamlit",
    "torch",
    "torchaudio",
    "torchcodec>=0.10.0",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ty",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.environment]
python-version = "3.12"
