[project]
name = "granite-speech-studio"
version = "0.11.0"
description = "Streamlit application for transcription and translation using IBM Granite Speech on Apple Silicon with MLX."
requires-python = ">=3.12"
dependencies = [
    "mlx-audio",
    "silero-vad",
    "streamlit",
    "torch",
    "torchaudio",
    "torchcodec>=0.10.0",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ty",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.environment]
python-version = "3.12"
